--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
   "bugs": {
     "url": "https://github.com/unau/nougat/issues"
   },
-  "homepage": "https://github.com/unau/nougat"
+  "homepage": "https://github.com/unau/nougat",
+  "config":  {
+    "nougat": {
+      "gasProject": {
+        "id" : "18DmSweuv1G7TRRm95fXCZBeaP34JkwExbJfExL0LbajCJAtm4yqHBJOc",
+        "key": "M5NHcHWRlfLLC58GrsO05CWtj26Rh5Cwx",
+        "version": 2
+      }
+    }
+  }
 }
-
